# lets-recre8-very-lovable

./: .gitignore  LICENSE  package.json  server.js
agent_api/: api.py
build_anything/: .env.sample  README.md  pyproject.toml
build_anything/src/build_anything/: crew.py  main.py  move_generated_scripts.py
build_anything/src/build_anything/config/: agents.yaml  tasks.yaml
build_anything/src/build_anything/tools/: file_tools.py
external_sandbox/: node_server.sh  package.json  server.js
external_sandbox/public/: scripts.js
files/: package.json
files/public/: index.html  styles.css
public/: index.html
very_lovable/: server.js
very_lovable/public/: index.html
